[tool.poetry]
name = "krypto"
version = "1.0.0"
description = "A python API that creates issues in your repos based on TODO: comments in your code"
authors = ["antoniouaa <antoniouaa@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
click = "^8.0.1"
tomli = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
taskipy = "^1.8.1"
pytest-cov = "^2.12.1"
coveralls = "^3.1.0"
responses = "^0.13.3"

[tool.taskipy.tasks]
test = { cmd = "pytest -vvv --cov=krypto", help = "Run all the tests"}

[tool.poetry.scripts]
krypto = "krypto:cli"

# Example config
[tool.krypto]
comment = "//"
prefix = "FIXME"
include = "tests"
attach-issue = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
