[tool.poetry]
name = "krypto"
version = "0.1.0"
description = "A python API that creates issues in your repos based on TODO: comments in your code"
authors = ["antoniouaa <antoniouaa@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
click = "^8.0.1"
tomli = "^1.0.4"
types-requests = "^2.25.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
taskipy = "^1.8.1"
pytest-cov = "^2.12.1"
coveralls = "^3.1.0"
responses = "^0.13.3"
mypy = "^0.910"

[tool.taskipy.tasks]
test = { cmd = "echo pytest -vvv --cov=krypto && pytest -vvv --cov=krypto", help = "Run all the tests"}
mypy = { cmd = "echo mypy ./krypto/ && mypy ./krypto/", help = "Run type checking"}

[tool.poetry.scripts]
krypto = "krypto:cli"

[tool.mypy]
ignore_missing_imports = true

# Example config
[tool.krypto]
prefix = "TODO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
