[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.4",
    "black<22.0,>=21.6b0",
    "taskipy<2.0.0,>=1.8.1",
    "pytest-cov<3.0.0,>=2.12.1",
    "coveralls<4.0.0,>=3.1.0",
    "responses<1.0.0,>=0.13.3",
    "mypy<1.0,>=0.910",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [{ name = "antoniouaa", email = "antoniouaa@hotmail.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.7"
dependencies = [
    "requests<3.0.0,>=2.26.0",
    "click<9.0.0,>=8.0.1",
    "tomli<2.0.0,>=1.0.4",
    "types-requests<3.0.0,>=2.25.6",
]
name = "krypto"
version = "0.1.0"
description = "A python API that creates issues in your repos based on TODO: comments in your code"

[project.scripts]
krypto = "krypto:cli"

[tool.taskipy.tasks]
test = { cmd = "echo pytest -vvv --cov=krypto && pytest -vvv --cov=krypto", help = "Run all the tests" }
mypy = { cmd = "echo mypy ./krypto/ && mypy ./krypto/", help = "Run type checking" }

[tool.mypy]
ignore_missing_imports = true

# Example config
[tool.krypto]
prefix = "TODO"
src = "krypto"
